# ML_projects

./: README.md
01_data_preprocessing/: README.md  Исследование_надежности_заемщиков.ipynb
02_eda/: README.md
04_ml_classic/: README.MD
05_ml_business/: README.md  Прогноз истощения абсорбента NaOH в абсорбере (промышленная аналитика).ipynb
06_nlp/: README.MD  Классификация токсичных комментариев (BERT).ipynb  Классификация токсичных комментариев.ipynb
07_cv/: README.md  Определение возраста покупателей.ipynb
alfa_rag_demo/: .gitignore  README.md  gold_labels.csv  pyproject.toml  requirements.txt
alfa_rag_demo/apps/: streamlit_app.py
alfa_rag_demo/notebooks/: RAG.ipynb
alfa_rag_demo/scripts/: eval_gold.py  make_chunks_parquet.py  run_demo.py
alfa_rag_demo/src/alfa_rag/: clarify.py  config.py  decision.py  eval.py  guardrails.py  labeling.py  llm.py  rerank.py  retrieval.py  service.py
text2sql_agent/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
text2sql_agent/apps/: streamlit_app.py
text2sql_agent/docker/init/: northwind.sql
text2sql_agent/eval/: northwind_ru.jsonl  run_northwind_eval.py
text2sql_agent/notebooks/: Text-to-SQL.ipynb
text2sql_agent/scripts/: make_eval_notebook.py  show_schema.py  smoke_queries.py  test_db.py
text2sql_agent/text2sql/: __init__.py  agent.py  config.py  db.py  docgen.py  guardrails.py  introspect.py  schema_search.py
